--- a/api/Gemfile
+++ b/api/Gemfile
@@ -24,6 +24,7 @@ gem 'jquery-rails'
 
 group :production do
   gem 'rails_12factor'
+  gem 'pg'
 end
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
